--- a/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_content_o74.html
+++ b/src/main/resources/static/f/eh2/icpc2_test4/icpc2_cell_content_o74.html
@@ -1,11 +1,11 @@
 <div on="col_k_content" ng-switch>
 	<div ng-switch-default ng-if="col_k_content.indexOf('head_')!=0"
 		on="col_k_content" ng-switch>
-
 		<div class="w3-dropdown-click">
 			<a href="#" class="am-j2c"
 				ng-keyup="keys_use.keyUp($event, view.dataName)"><div
-					ng-switch-default>{{progr_am[view.dataName].getColValue(row,
+					ng-switch-default>
+					{{progr_am[view.dataName].getColValue(row,
 					col_k)}}</div>
 				<div ng-switch-when="col_9775|col_9776|col_10900"
 					ng-switch-when-separator="|">
