--- a/src/main/resources/static/f/eh2/abk1/abk1.html
+++ b/src/main/resources/static/f/eh2/abk1/abk1.html
@@ -9,22 +9,18 @@
 	<div ng-if="isPatientSelected">
 		<div ng-repeat="r in icpc2_nakaz74.data.list">
 			<div class="am-b w3-small">
-			<!-- 
+				<!-- 
 				{{r.created | date : 'longDate'}},
 			 -->
 				{{r.dayDate}}
-				</div>
-			{{r.created | date : 'shortTime'}}
-			<span ng-repeat="k_f74 in ['col_10771','col_11327','col_10807']">
-			<!-- 
+			</div>
+			{{r.created | date : 'shortTime'}} <span
+				ng-repeat="k_f74 in ['col_10771','col_11327','col_10807']"> <!-- 
 				<span class="am-b w3-small">
 					{{icpc2_nakaz74.data.col_keys[k_f74]}}:</span> 
-			 -->
-					
-					{{r[k_f74]}}
-					<span class="w3-small">
-				{{!r[k_f74]?('<'+icpc2_nakaz74.data.col_keys[k_f74]+'>'):''}}
-					</span>
+			 --> {{r[k_f74]}}<span class="w3-small">
+					{{!r[k_f74]?('<'+icpc2_nakaz74.data.col_keys[k_f74]+'>'):''}} </span>
+				{{$last?'.':','}}
 			</span>
 			<!-- 
 			<div class="am-b w3-small w3-hover-shadow w3-hover-border-blue-gray w3-border w3-border-white">
