--- a/src/main/resources/static/f/eh2/calendar/physician_calendar_j2ct_visit.html
+++ b/src/main/resources/static/f/eh2/calendar/physician_calendar_j2ct_visit.html
@@ -2,6 +2,10 @@
 	<div ng-switch-when="head_visit">
 		<i class="fa fa-calendar-o"></i>
 	</div>
+	<div ng-switch-when="pip_patient"
+		ng-bind-html="highlight(row.pip_patient, progr_am.viewes.menu.seek)">
+	</div>
+
 	<div ng-switch-when="pip_physician" title="{{row.pip_physician}}">
 		<span ng-repeat="n in row.pip_physician.split(' ')">{{n.substring(0,1)}}</span>
 	</div>
