--- a/src/main/resources/static/f/eh2/calendar/physician_calendar_j2ct_physicians.html
+++ b/src/main/resources/static/f/eh2/calendar/physician_calendar_j2ct_physicians.html
@@ -1,9 +1,9 @@
 <div on="col_k_content" ng-switch>
-	<div ng-switch-when="physician">{{row.last_name}}
-		{{row.first_name}} {{row.second_name}}</div>
+	<div ng-switch-when="physician"
+	ng-bind-html="highlight(row.physician, progr_am.viewes.menu.seek2)"
+	></div>
 	<div ng-switch-when="pip_physician">
-		<span
-			ng-repeat="n_key in ['last_name','first_name','second_name']"
+		<span ng-repeat="n_key in ['last_name','first_name','second_name']"
 			ng-init="n=row[n_key]">{{n.substring(0,1)}}</span>
 	</div>
 	<div ng-switch-when="visit">
