--- a/src/main/resources/static/f/eh2/calendar/calendar3_week.html
+++ b/src/main/resources/static/f/eh2/calendar/calendar3_week.html
@@ -21,6 +21,8 @@
 			}"
 			class="w3-border w3-hover-shadow w3-dropdown-click">
 			<div class="w3-tiny" ng-if="h_index==0">
+			a3
+			{{basicCalendar.gui.workTimeStampWeekDay(wd)|date:'shortDate'}}
 				<div class="w3-display-topmiddle"
 					ng-class="{
 				'am-b':h_index==0 && basicCalendar.gui.isWorkTimeStampDay(wd),
