--- a/src/main/resources/static/f/eh2/info/info3.html
+++ b/src/main/resources/static/f/eh2/info/info3.html
@@ -8,4 +8,9 @@
 		ng-if="group_v.isObject()">
 		<span ng-include="'/f/eh1/info2/info2_group_links.html'"></span>
 	</div>
+	<div class="w3-border-top">
+		<h3 class="w3-small" style="text-decoration: overline;">Карта
+			сайту</h3>
+		<a href="/v/info"> Інформаційна сторінка </a>
+	</div>
 </div>
