--- a/src/main/resources/static/f/eh2/hrm_cards/hrm_cards_j2ct_content.html
+++ b/src/main/resources/static/f/eh2/hrm_cards/hrm_cards_j2ct_content.html
@@ -4,6 +4,10 @@
 	<div ng-switch-when="person_id">
 		<a href="?person_id={{row.person_id}}">{{row.person_id}}</a>
 	</div>
+	<div class="am-nowrap" ng-switch-when="birth_date"
+	title="{{row[col_k_content]}}"
+	>
+		{{row[col_k_content]|date:'mediumDate'}}</div>
 	<div ng-switch-default ng-if="col_k_content.indexOf('head_')!=0"
 		on="col_k_content" ng-switch>{{row[col_k_content]}}</div>
 </div>
