--- a/src/main/resources/static/f/ehealth-declaration/mis-list.html
+++ b/src/main/resources/static/f/ehealth-declaration/mis-list.html
@@ -16,7 +16,7 @@
 	<thead>
 		<tr>
 			<th>МІСи</th>
-			<th><a href="https://ehealth-ukraine.org/"
+			<th><a href="https://portal.ehealth.gov.ua/providers.html"
 			class="w3-right"
 				style="color: #fff; background: #f03f02; padding: 8px 15px; font-size: 16px; font-weight: bold; 
 				text-decoration: none; text-transform: uppercase;">Реєстрація</a>
