index record head w3-text-gray

--- a/src/main/resources/static/f/eh2/index/record-state-preprod.html
+++ b/src/main/resources/static/f/eh2/index/record-state-preprod.html
@@ -1,3 +1,3 @@
-<div class="w3-tiny">
+<div class="w3-tiny w3-text-gray">
 	... для лікарів <span class="w3-right"> попереднє виробництво </span>
 </div>
