--- a/src/main/resources/static/f/eh2/index/middle-index.html
+++ b/src/main/resources/static/f/eh2/index/middle-index.html
@@ -1,6 +1,10 @@
 <div class="w3-white w3-border w3-round am-p-5">
 	<div ng-include="'/f/eh2/index/record-state-test.html'"></div>
 	Веденя електроних медичних записів по системі ICPC2.
+	<div>
+	<a href="/v/ambk?person_id=11489">Демо 1</a>,
+	<a href="/v/ambk?person_id=11484">Демо 2</a>
+	</div>
 </div>
 <div class="w3-white w3-border w3-round am-p-5">
 <div ng-include="'/f/eh2/index/record-state-preprod.html'"></div>
