settings + set employee role

--- a/src/main/resources/static/f/eh2/info/info3.html
+++ b/src/main/resources/static/f/eh2/info/info3.html
@@ -1,9 +1,9 @@
 <div>
-	<h1 class="w3-small" style="text-decoration: overline;">
+	<div class="w3-blue-gray w3-small" style="text-decoration: overline;">
 		<a class="w3-hover-light-gray w3-hover-shadow" href="/"> <i
 			class="fa fa-home"></i></a> | <span style="text-decoration: underline;">
 			МІС-Алгорітмед</span> | development
-	</h1>
+	</div>
 	<div ng-repeat="(group_k, group_v) in pageGroup.misAlgoritmed3"
 		ng-if="group_v.isObject()">
 		<span ng-include="'/f/eh1/info2/info2_group_links.html'"></span>
