--- a/src/main/resources/static/f/eh2/index/middle-index.html
+++ b/src/main/resources/static/f/eh2/index/middle-index.html
@@ -1,17 +1,22 @@
+<div class="w3-white w3-border w3-round am-p-5"
+	ng-if="page.getPrincipalRole().fns[0]=='J'">
+	<a href="/v/settings"> Налаштунки МІС-АЛГОРІТМЕД </a>
+	<div class="w3-code">{{page.getPrincipalRole()}}
+		{{page.getPrincipalRole().fns[0]}}</div>
+</div>
 <div class="w3-white w3-border w3-round am-p-5">
 	<div ng-include="'/f/eh2/index/record-state-test.html'"></div>
 	Веденя електроних медичних записів по системі ICPC2.
 	<div>
-	<a href="/v/ambk?person_id=11489">Демо 1</a>,
-	<a href="/v/ambk?person_id=11484">Демо 2</a>
+		<a href="/v/ambk?person_id=11489">Демо 1</a>, <a
+			href="/v/ambk?person_id=11484">Демо 2</a>
 	</div>
 </div>
 <div class="w3-white w3-border w3-round am-p-5">
-<div ng-include="'/f/eh2/index/record-state-preprod.html'"></div>
-Підписання декларацій з пацієнтом і договорів з НСЗУ.
+	<div ng-include="'/f/eh2/index/record-state-preprod.html'"></div>
+	Підписання декларацій з пацієнтом і договорів з НСЗУ.
 </div>
 <div class="w3-white w3-border w3-round am-p-5">
-<div ng-include="'/f/eh2/index/record-patient-state-development.html'"></div>
-Запис на прийом до лікаря, ч/з інтернет.
-Кабінет пацієнта.
+	<div ng-include="'/f/eh2/index/record-patient-state-development.html'"></div>
+	Запис на прийом до лікаря, ч/з інтернет. Кабінет пацієнта.
 </div>
