--- a/src/main/resources/static/f/eh2/settings/settings.html
+++ b/src/main/resources/static/f/eh2/settings/settings.html
@@ -35,15 +35,14 @@
 				<div>
 					<div class="w3-row w3-tiny">
 						<div class="w3-col m4 l4 s4 am-b">Зміна пароля:</div>
-						<div class="w3-col m8 l8 s8">
-							{{principal.user.username}}
-						</div>
+						<div class="w3-col m8 l8 s8">{{principal.user.username}}</div>
 					</div>
 					<div class="w3-row">
 						<div class="w3-col m4 l4 s4 ">Пароль:</div>
 						<div class="w3-col m8 l8 s8">
-							<input ng-model="progr_am.passwordChange.data.password" placeholder="Пароль"
-								class="w3-border am-width-100pr" type="password">
+							<input ng-model="progr_am.passwordChange.data.password"
+								placeholder="Пароль" class="w3-border am-width-100pr"
+								type="password">
 						</div>
 					</div>
 					<div class="w3-row">
@@ -59,7 +58,8 @@
 								ng-if="progr_am.passwordChange.error.password2">{{progr_am.passwordChange.error.password2}}</div>
 						</div>
 					</div>
-					<button class="w3-border" ng-click="progr_am.passwordChange.save()">Змінити пароль</button>
+					<button class="w3-border" ng-click="progr_am.passwordChange.save()">Змінити
+						пароль</button>
 				</div>
 				<div>
 					<div class="am-b w3-tiny">Контактні дані</div>
@@ -70,6 +70,24 @@
 					<!-- 
 					<div class="w3-code">{{principal.user}}</div>
 					 -->
+				</div>
+				<div
+					ng-if="progr_am.roles.hasLoginRole3('ROLE_HEAD_MSP') && !principal.user_msp[0]"
+					class="w3-border w3-border-green">
+					<div class="w3-tiny w3-green am-b">Створити лікувальний
+						заклад</div>
+					<div class="w3-row">
+						<div class="w3-col m4 l4 s4 ">Назва:</div>
+						<div class="w3-col m8 l8 s8">
+							<input ng-model="progr_am.roles.data.msp_name"
+								placeholder="Назва лікувального закладу"
+								class="w3-border am-width-100pr">
+						</div>
+						<button class="w3-border" ng-click="progr_am.roles.add_msp()">OK</button>
+					</div>
+				</div>
+				<div ng-repeat="msp in principal.user_msp" class="w3-code">
+					<a href="/v/msp_page3?msp_id={{msp.doc_id}}"> {{msp.msp_name}} </a> {{msp}}
 				</div>
 			</div>
 		</div>
