--- a/src/main/resources/static/f/pis1-am-1/registry1/registry2.html
+++ b/src/main/resources/static/f/pis1-am-1/registry1/registry2.html
@@ -1,4 +1,13 @@
+<div class="w3-blue-gray w3-small" style="text-decoration: overline;">
+	<a class="w3-hover-light-gray w3-hover-shadow" href="/"> <i
+		class="fa fa-home"></i></a> | <span style="text-decoration: underline;">
+		МІС-Алгорітмед</span> | активація логін
+</div>
 <!-- 
 <div ng-include="'/f/algoritmed/lib/head1.html'"></div>
  -->
 <h1>Активація регістрації в системі</h1>
+Логін активований 
+<p>
+	Login <span ng-include="'/f/algoritmed/lib/link-to-login.html'"></span>
+</p>
