--- a/src/main/resources/static/f/eh2/j2c_table.html
+++ b/src/main/resources/static/f/eh2/j2c_table.html
@@ -1,4 +1,7 @@
 <div class="w3-card" ng-style="progr_am.fn.ngStyle('j2c_table')">
+	<div ng-if="!data" class="w3-tiny">
+		<button ng-click="read_t2j()" class="w3-hover-gray w3-border">Оновити дані</button>
+	</div>
 	<table class="w13-table">
 		<thead>
 			<tr class="w3-tiny w3-gray">
