lab first commit

--- a/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C.html
@@ -1,4 +1,4 @@
-<table am-obj="scopeObj" ng-repeat="o in [objFromAmObj]">
+<table ng-repeat="o in [oo]">
 	<tr class="w3-tiny w3-gray">
 		<th class="w3-dropdown-hover">☰
 			<div class="w3-dropdown-content w3-bar-block w3-border">
@@ -9,14 +9,12 @@
 		<th ng-repeat="(ck,cv) in o.col_keys">{{cv}}</th>
 	</tr>
 	<tr ng-repeat="tr in o.list">
-	<td></td>
+		<td></td>
 		<td ng-repeat="(ck,cv) in o.col_keys" ng-init="cl=o.col_links[ck]"
-			class="w3-border w3-border-white w3-hover-border-gray">
-			<span
-			ng-if="!cl"> {{tr[ck]}} </span> 
-			<a href="?{{cl.k}}={{tr[cl.vk]}}"
+			class="w3-border w3-border-white w3-hover-border-gray"><span
+			ng-if="!cl"> {{tr[ck]}} </span> <a href="?{{cl.k}}={{tr[cl.vk]}}"
 			ng-if="cl"> {{tr[ck]}} </a></td>
-			<!-- 
+		<!-- 
 		<td title="{{tr}}">a1</td>
 			 -->
 	</tr>
