insert/update folder/table

--- a/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C.html
@@ -6,6 +6,7 @@
 				<a href="#" class="w3-bar-item w3-button"
 					ng-click="pageVar.openEditRow(o)"><i
 					class="fa fa-pencil-square-o"></i> Змінити</a> <a href="#"
+					ng-click="pageVar.addRow(o)"
 					class="w3-bar-item w3-button"><i class="fa fa-plus"></i> Додати
 					запис</a>
 			</div>
