--- a/src/main/resources/static/f/am-dev/1c-db-tables2/page.head.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/page.head.html
@@ -1,7 +1,7 @@
 <div class="w3-row-padding w3-border-bottom">
 	<div class="w3-col {{page.head.headClass}}">
 		<h3>
-			<a href="/">/</a> Таблиці1C
+			<a href="./create_tables2">/</a> Таблиці1C
 		</h3>
 	</div>
 	<div class="w3-rest">
