read table_1c data

--- a/src/main/resources/static/f/am-dev/1c-db-tables/1c-db-tables.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables/1c-db-tables.html
@@ -22,8 +22,9 @@
 		</div>
 	</div>
 	<div class="w3-row-padding w3-border-bottom">
-	  <div class="w3-half w3-card">
+		<div class="w3-half w3-card">
 			<div amd-run="programRun.table"></div>
+			<div class="w3-code">a1</div>
 		</div>
 		<div class="w3-half">
 			<div class="w3-padding-small">
