--- a/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
@@ -14,9 +14,11 @@
 				ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
 		</div>
 	</div>
-<div>
-данні
-</div>
+	<div>
+		данні
+		<div ng-repeat="oo in [table_data]" class="w3-card"
+			ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
+	</div>
 	<div ng-style="pageVar.ngStyleModal" class="w3-modal">
 		<div class="w3-modal-content">
 			<div class="w3-container">
