--- a/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C.html
@@ -19,9 +19,11 @@
 	</tr>
 	<tr ng-repeat="tr in o.list">
 		<td ng-repeat="(ck,cv) in o.col_keys" ng-init="cl=o.col_links[ck]"
-			ng-class="{'w3-green':tr[ck]==request.parameters[cl.k]}"
+			ng-class="{'w3-green':tr[ck]&&tr[ck]==request.parameters[cl.k]}"
 			class="w3-border w3-border-white w3-hover-border-gray"><span
-			ng-if="!cl"> {{tr[ck]}} </span> <a href="?{{cl.k}}={{tr[cl.vk]}}"
+			ng-if="!cl"> {{tr[ck]}} </span> <a 
+ng-href="{{pageVar.colLink(cl,tr)}}"
+h1ref="?{{cl.k}}={{tr[cl.vk]}}"
 			ng-if="cl"> {{tr[ck]}} </a></td>
 	</tr>
 </table>
