--- a/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
@@ -11,6 +11,7 @@
 		</div>
 		<div class="w3-col m6 l6 s6">
 			<div ng-repeat="oo in [create_tables]" class="w3-card"
+				style="height: 250px; overflow: auto;"
 				ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
 		</div>
 	</div>
