table_j2c fieldtype constraint

--- a/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
@@ -39,24 +39,26 @@
 					<div class="w3-code">{{create_tables}}</div>
 					<div class="w3-code">{{table_types}}</div>
 					 -->
-					<div ng-repeat="(ck,cv) in pageVar.o.col_keys">
+					<div ng-repeat="(ck,cv) in pageVar.o.col_keys" ng-switch="ck">
 						<b class="w3-small" title="{{ck}}">{{cv}}:</b> <span
 							ng-if="pageVar.o.no_edit.indexOf(ck)>=0">
-							{{pageVar.rowObj[ck]}} </span>
-						<div ng-switch="ck">
-							<div ng-switch-when="fieldtype">
-								{{pageVar.rowObj[ck]}} <select
-									ng-model="pageVar.rowObj[ck+'_id']" style="width: 100%;"
-									class="w3-border">
-									<option value="{{v1.string_id}}"
-										ng-selected="pageVar.rowObj[ck+'_id']==v1[ck+'_id']"
-										ng-repeat="v1 in table_types.list">{{v1.value}}</option>
-								</select>
+							{{pageVar.rowObj[ck]}} </span> {{ck}}--
+						<div ng-switch-when="fieldtype">
+							{{pageVar.rowObj[ck]}} <select
+								ng-model="pageVar.rowObj[ck+'_id']" style="width: 100%;"
+								class="w3-border">
+								<option value="{{v1.string_id}}"
+									ng-selected="pageVar.rowObj[ck+'_id']==v1[ck+'_id']"
+									ng-repeat="v1 in table_types.list">{{v1.value}}</option>
+							</select>
+							<div ng-if="pageVar.rowObj[ck]=='constraint'">
+								table <input style="width: 100%;"
+									ng-model="pageVar.rowObj.reference2" class="w3-border">
 							</div>
-							<div ng-switch-default>
-								<input style="width: 100%;" ng-model="pageVar.rowObj[ck]"
-									ng-if="pageVar.o.no_edit.indexOf(ck)<0" class="w3-border">
-							</div>
+						</div>
+						<div ng-switch-default>
+							<input style="width: 100%;" ng-model="pageVar.rowObj[ck]"
+								ng-if="pageVar.o.no_edit.indexOf(ck)<0" class="w3-border">
 						</div>
 					</div>
 				</div>
