--- a/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
@@ -15,11 +15,17 @@
 				ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
 		</div>
 	</div>
-	<div>
+	<div class="w3-row-padding w3-border-bottom">
+		<div class="w3-col m6 l6 s6">
 		данні
 		<div ng-repeat="oo in [table_data]" class="w3-card"
 			ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
+		</div>
+		<div class="w3-col m6 l6 s6">
+		config
+		</div>
 	</div>
+
 	<div ng-style="pageVar.ngStyleModal" class="w3-modal">
 		<div class="w3-modal-content">
 			<div class="w3-container">
