--- a/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/1c-db-tables2.html
@@ -22,7 +22,14 @@
 			ng-include="'/f/am-dev/1c-db-tables2/tableJ2C.html'"></div>
 		</div>
 		<div class="w3-col m6 l6 s6">
-		config
+			config
+			<div class="w3-card"
+				ng-if="
+		request.parameters.row_id
+		&&
+		request.parameters.tableId==124
+		"
+				ng-include="'/f/am-dev/1c-db-tables2/lab-view1.html'"></div>
 		</div>
 	</div>
 
